[tool.poetry]
name = "very_plot"
version = "0.1.0"
description = ""
authors = ["DanielMartinAlarcon <daniel@martinalarcon.org>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.1"
seaborn = "^0.9.0"
pytest-watch = "^4.2"
click = "^7.0"
pytest-mock = "^1.12"

[tool.poetry.dev-dependencies]
scipy = "^1.3"
pandas = "^0.25.3"
pytest = "^5.3"
jupyter = "^1.0"
notebook = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"